[gd_scene load_steps=59 format=2]

[ext_resource path="res://Scripts/Player/Smart_Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player/Smart_Party.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player/States/move_states/Idle.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player/States/move_states/Move.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player/States/move_states/Jump.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Player/States/move_states/Fall.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Player/States/move_states/AttackState.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Player/States/DamageState.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Player/States/DeathState.gd" type="Script" id=9]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie.png" type="Texture" id=10]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_jump4.png" type="Texture" id=11]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_jump5.png" type="Texture" id=12]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_damage1.png" type="Texture" id=13]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_damage2.png" type="Texture" id=14]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_jump2.png" type="Texture" id=15]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_jump3.png" type="Texture" id=16]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle1.png" type="Texture" id=17]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle2.png" type="Texture" id=18]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle3.png" type="Texture" id=19]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle4.png" type="Texture" id=20]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle5.png" type="Texture" id=21]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle6.png" type="Texture" id=22]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle7.png" type="Texture" id=23]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_Idle8.png" type="Texture" id=24]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_move1.png" type="Texture" id=25]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_move2.png" type="Texture" id=26]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_move3.png" type="Texture" id=27]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_move4.png" type="Texture" id=28]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_move5.png" type="Texture" id=29]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_move6.png" type="Texture" id=30]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_move7.png" type="Texture" id=31]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_attack_one2.png" type="Texture" id=32]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_attack_one3.png" type="Texture" id=33]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_attack_one4.png" type="Texture" id=34]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_attack_one5.png" type="Texture" id=35]
[ext_resource path="res://Art Assets/Characters/Zulie/Zulie_attack_one6.png" type="Texture" id=36]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle1.png" type="Texture" id=37]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_jump3.png" type="Texture" id=38]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_jump4.png" type="Texture" id=39]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_jump1.png" type="Texture" id=40]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_jump2.png" type="Texture" id=41]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle2.png" type="Texture" id=42]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle3.png" type="Texture" id=43]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle4.png" type="Texture" id=44]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle5.png" type="Texture" id=45]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle6.png" type="Texture" id=46]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle7.png" type="Texture" id=47]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle8.png" type="Texture" id=48]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_alt_walk_cycle9.png" type="Texture" id=49]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_melee_attack1.png" type="Texture" id=50]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_melee_attack2.png" type="Texture" id=51]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_melee_attack3.png" type="Texture" id=52]
[ext_resource path="res://Art Assets/Alternate Dummy Animations/fixed_dummy_melee_attack4.png" type="Texture" id=53]
[ext_resource path="res://Scripts/shooter.gd" type="Script" id=54]
[ext_resource path="res://Scripts/attacker.gd" type="Script" id=55]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Damage",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "Move",
"speed": 12.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": false,
"name": "Attack",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 37 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ) ],
"loop": false,
"name": "Damage",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "Move",
"speed": 15.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": false,
"name": "Attack",
"speed": 15.0
} ]

[node name="Player" type="KinematicBody2D"]
editor/display_folded = true
script = ExtResource( 1 )
health = 5
acceleration = 15
maxSpeed = 150
jumpHeight = 150

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="front_ray" type="RayCast2D" parent="."]
position = Vector2( 0, 12 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="back_ray" type="RayCast2D" parent="."]
position = Vector2( 0, 12 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="Party" type="Node" parent="."]
script = ExtResource( 2 )

[node name="States" type="Node" parent="."]
editor/display_folded = true

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Move" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Damage" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Death" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Anim_Players" type="Node2D" parent="."]

[node name="Zulie_Anim_Player" type="AnimatedSprite" parent="Anim_Players"]
visible = false
frames = SubResource( 2 )
animation = "Idle"

[node name="Dummy_Anim_Player" type="AnimatedSprite" parent="Anim_Players"]
visible = false
frames = SubResource( 3 )
animation = "Idle"

[node name="shoot-point" type="Area2D" parent="."]
script = ExtResource( 54 )

[node name="melee-point" type="Position2D" parent="."]
script = ExtResource( 55 )

[connection signal="animation_finished" from="Anim_Players/Zulie_Anim_Player" to="States/Attack" method="_on_Zulie_Anim_Player_animation_finished"]
[connection signal="animation_finished" from="Anim_Players/Dummy_Anim_Player" to="States/Attack" method="_on_Dummy_Anim_Player_animation_finished"]
